# dori

./: .gitignore  Makefile  README.md  can.h  can_names.h  candefs.h  compass_test.cpp  db  db_tmp  fl_compass.cpp  server.c  siteobjects.db  spawnablewindow.h  todo  todo_hardware
3d/nunchuck/: nunchuck2.txt  viewport.cpp  viewport.h
3d/objmodel/: Makefile  arcball.cpp  main.cpp  objmodel.cpp  objmodel.h  poland_sm.xyz  robot.mtl  vectors.h  viewport.cpp  viewport.h
3d/objmodel/multiarcball/: ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  multiarcball-FL.pc  multiarcball-FL.pc.in  multiarcball-fltk2.pc  multiarcball-fltk2.pc.in  multiarcball.pc  multiarcball.pc.in  multiarcballmm.pc  multiarcballmm.pc.in
3d/objmodel/multiarcball/doc/: eventsmap.html
3d/objmodel/multiarcball/src/: Makefile  Makefile.am  Makefile.in
3d/objmodel/multiarcball/src/FLui/: FlGlArcballWindow.cpp  FlGlArcballWindow.h  Makefile  Makefile.am  Makefile.in
3d/objmodel/multiarcball/src/FLui/.deps/: libFLarcball_la-FlGlArcballWindow.Plo
3d/objmodel/multiarcball/src/data/: rot_y.xpm
3d/objmodel/multiarcball/src/flcursors/fltk1/: Fl_Custom_Cursor.cxx
3d/objmodel/multiarcball/src/fltkui/: GlArcballWindow.cpp  Makefile  Makefile.am  Makefile.in
3d/objmodel/multiarcball/src/gtkmmui/: Makefile  Makefile.am  Makefile.in  gtkmm_arcball.cpp  gtkmm_arcball.h
3d/objmodel/multiarcball/src/math/: Makefile  Makefile.am  Makefile.in  basic_ball.h
3d/objmodel/multiarcball/src/math/.deps/: lib3dmath_la-basic_ball.Plo
3d/objmodel/multiarcball/test/: Makefile  Makefile.am  Makefile.in  testFL2.cpp
3d/objmodel/multiarcball/test/.deps/: examplefl1-exampleFL.Po  testfl1-testFL.Po  testmath-testmath.Po
3d/objmodel/multiarcball/vc/: Makefile  Makefile.am  Makefile.in  libfltk.vcproj  libfltk2.vcproj  libgktmm.vcproj  libmath.vcproj  testfltk.vcproj  testfltk2.vcproj  testgktmm.vcproj  vc.sln
avr/: .gitignore  Makefile.avr  adc.c  adc.h  atan2.c  can.h  debug.c  debug.h  ds18b20.c  ds18b20.h  errno.h  fat.c  fat.h  free_ram.h  i2c.c  i2c.h  irq.c  irq.h  mcp2515.c  mcp2515.h  node.c  node.h  onewire.c  onewire.h  ring.h  sd.c  sd.h  spi.c  spi.h  sram.c  sram.h  temp.c  temp.h  time.c  time.h  timer.c  timer.h  uart.c  uart.h
avr/9dof/: Makefile  hmc5883.c  hmc5883.h  main.c  mpu6050.c  mpu6050.h  nmea.c  nmea.h  nunchuck.c  nunchuck.h
avr/arm/: Makefile  arm.c  arm.h  armwires.txt  laser.c  laser.h  laser_defs.h  main.c  motor.c  motor.h  pinout.txt  stepper.c  stepper.h  wiring
avr/avr1wire/: main.c  main.elf  main.hex  main.map  tags  tty
avr/avr9dofnode/: Makefile  hmc5883.c  mpu6050.c  nmea.c  nunchuck.h
avr/avrarmnode/: Makefile  arm.c  arm.h  main.c
avr/avrbarometric/: Makefile  main.c
avr/avrchangecase/: Makefile  main.c
avr/avrdemo/: crc8.c  crc8.h  ds18x20.c  motor.c  motor.h  tty.C  uart.c  uart.h
avr/avrfbus/: Makefile  fbus.h  led.h  main.c  multiplex.c  ts555.c
avr/avrgps/: Makefile  a.out  capture.txt  main.c  main.elf  main.hex  main.linux.C  nmea.c  test.c
avr/avrgyro/: Makefile  main.c  mpu6050.c  mpu6050.h
avr/avrheaternode/: main.c
avr/avrheatingnode/: Makefile  crc8.c  crc8.h  ds18b20.c  ds18b20.h  main.c  main.map  onewire.c  onewire.h
avr/avrimu/: frontend.C  hmc5883.h  i2c.c  main.c  nunchuck.c
avr/avrirtemp/: Makefile  main.c
avr/avrlaser/: Makefile  laser.c  laser.h  main.c  mcp2515.c  spi.h  time.c  time.h
avr/avrlidar/: Makefile  irtemp.c.bak
avr/avrlogger/: Makefile  sd.h  spi.h  time.c  time.h
avr/avrnunchuck/: Makefile  README.md  cube.C  limits.txt  main.c  nunchuck.c  nunchuck.h  nunchuck.txt  nunchuck2.txt  nunchuck90.txt  pinout.txt  rot.cpp
avr/avrovernight/: main.c  main.elf  main.hex  uart.h
avr/avrpowershot/: Makefile  main.c  main.elf  main.hex  main.map
avr/avrreflash/: Makefile  Makefile.avr  main.c  uart.c  uart.h
avr/avrsd/: .fat.h.swp  Makefile  fat.c  fat.c.byte  fat.h  main.c  main.elf  main.hex  protocol.txt
avr/avrsniffer/: Makefile  main.c  main.elf  main.hex  mcp2515.c  mcp2515.h  spi.c  spi.h  time.h
avr/avrsnowmodem/: main.elf  main.hex  mcp2515.c  mcp2515.h  modem-http.c.hide  modem-http.h.hide  uart.c
avr/avrsnowtemp/: Makefile  ds18x20.c  ds18x20.h  main.c  main.elf  main.hex  mcp2515.c
avr/avrstepper/: main.c  main.elf  main.hex  motor.c
avr/avrultrasonic/: fltk  fltk.cpp  main.c  main.elf  main.hex  main.map  test.cc
avr/baudconv/: Makefile  main.c
avr/cam/: Makefile  ircam.c  ircam.h  main.c
avr/diag/: Makefile  current.c  current.h  heater.c  heater.h  main.c  pinout.txt  power.c  power.h  voltage.c  voltage.h
avr/drive/: Makefile  main.c  motor.c  motor.h
avr/enviro/: Makefile  bmp085.c  humidity.c  humidity.h  main.c  pinout.txt  temp.c  temp.h  wind.c  wind.h
avr/heater/: Makefile  main.c
avr/ircam/: main.c  pinout.txt
avr/lidar/: irtemp.c  laser.h  main.c
avr/logger/: Makefile  ircam.c  ircam.h  main.c
avr/modema/: Makefile  main.c  pinout.txt  (+2 more)
doc/: can.c  instincts.txt  node list.txt  todo  todo_hardware
dorisim/: Makefile  dorisim.c
gateway/: Makefile
mainwindow/: Makefile  main.cpp  mainwindow.cpp  mainwindow.h  queryinput.cpp  queryinput.h  table.cpp  table.h  widgetwindow.cpp  widgetwindow.h
modem/: Makefile  modem.c  readme.txt
multiarcball/: Makefile
radar/: Makefile  data.txt  main  main.cpp  radarwidget.cpp  radarwidget.h  radarwindow.cpp  radarwindow.h
saleae_plugin/: build_analyzer.py
shell/: Makefile  decan.c  delaser  logger  plotlaser
siteeditor/: Makefile  circle.h  circleobject.h  geometry.h  line.h  lineobject.h  rect.h  rectobject.cpp  rectobject.h  siteeditor.cpp  siteeditor.h  siteobject.h  toolbar.cpp  toolbar.h
tableview/: Makefile  dori.db  main.cpp  row.h  table.cpp  table.h  tableinput.cpp  tableinput.h  tableview.cpp  tableview.h
tests/: compass_test.cpp  decan.c  gauge_test.cpp  sensor_tests.sh  sparkline_test.cpp  uptime_tests.sh
tk/: Makefile
viewport/: Makefile  viewport.cpp  viewport.h
widgets/: Makefile
(+261 files in other folders)
