
INCLUDES =


AM_CXXFLAGS =

lib_LTLIBRARIES = lib3dmath.la

lib3dmath_la_CXXFLAGS =

lib3dmath_la_SOURCES = 3dcontrols.cpp\
  basic_ball.cpp

lib3dmath_la_LDFLAGS = @LTNOUNDEF@ @LIB_OPENGL_32@ -version-info @MA_LT_VERSION@

lib3dmath_la_LIBADD = 

lib3dmath_la_HEADERS = 3dcontrols.h\
  basic_ball.h\
	vmmath.h

lib3dmath_ladir = \
	$(pkgincludedir)

